k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: putty-app
  namespace: putty
  labels:
    app: putty
    component: frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: putty
      component: frontend
      version: v1.0.0
  template:
    metadata:
      labels:
        app: putty
        component: frontend
        version: v1.0.0
    spec:
      containers:
      - name: putty-frontend
        image: registry.digitalocean.com/resourceloop/putty-frontend:v1.0.f536a8d-20250829-124822
        ports:
        - containerPort: 80
          name: http
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5
      imagePullSecrets:
      - name: umi-backend
