k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: putty-service
  namespace: putty
  labels:
    app: putty
    component: frontend
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: putty
    component: frontend
